# pingus

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: pink.rs  rainbowsquare.rs
src/: adler32.rs  crc32.rs  deflate.rs  helper.rs  lib.rs  main.rs
